# kolla-containers

./: .env  .gitignore  .gitmodules  Jenkinsfile  Makefile  README.md  build.py  build.sh  build_config.yaml  install.sh  kolla-build  kolla-build-ci-overrides.conf  kolla-build-locals-overrides.conf  kolla-build.conf  kolla-build.conf.j2  kolla-build.conf.m4  kolla-template-overrides.j2  pyproject.toml  requirements.txt  run.sh  run_the_build.sh  setup_workdir.sh  ubuntu_22_sources.list
base/: Jenkinsfile  Jenkinsfile.subprofile  kolla-build.conf  kolla-template-overrides.j2  libnetwork.env
blazar/: .env  Jenkinsfile  kolla-build.conf  kolla-build.local-sources.conf  kolla-template-overrides.j2
cinder/: Jenkinsfile  kolla-build.conf
cyborg/: Jenkinsfile  kolla-build.conf
doni/: Jenkinsfile  kolla-build.conf  kolla-build.local-sources.conf
glance/: Jenkinsfile  kolla-build.conf
gnocchi/: Jenkinsfile  kolla-build.conf
heat/: Jenkinsfile  kolla-build.conf  kolla-build.local-sources.conf
horizon/: Jenkinsfile  config.json  horizon.conf  kolla-build.conf  kolla-build.local-sources.conf  kolla-template-overrides.j2  local_settings  local_settings.py  template-overrides.j2
horizon-kvm/: Jenkinsfile  kolla-build.conf  kolla-build.local-sources.conf  kolla-template-overrides.j2
horizon_kvm/: .env  Jenkinsfile  kolla-build.conf  kolla-build.local-sources.conf  kolla-template-overrides.j2
ironic/: Jenkinsfile  kolla-build.conf  kolla-build.local-sources.conf
keystone/: Jenkinsfile  kolla-build.conf  kolla-build.local-sources.conf
neutron/: .env  Jenkinsfile  (+3 more)
(+33 files in other folders)
